--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -99,7 +99,7 @@ This paper documents the diverse array of life-cycle benefits of an influential 
 
 Our analysis contributes to a growing literature on the benefits of early programs for disadvantaged children.\footnote{See, e.g., \cite{Currie_2011_AER} and \cite{Elango_Hojman_etal_2016_Early-Edu}.} Long-term evidence on their effectiveness is surprisingly limited.\footnote{The major source of evidence is from the Perry Preschool Program (see \citealp{Schweinhart_Montie_ea_2005_BOOKlifetime} and \citealp{Heckman_Moon_etal_2010_RateofReturn,Heckman_Moon_etal_2010_QE}), the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) (\citealp{Ramey_Campbell_etal_2000_ADS,Ramey-etal_2012-ABC}), and the Infant Health and Development Program (IHDP) (\citealp{Gross_Spiker_etal_1997_BOOKHelpinglowbirth,Duncan_Sojourner_2013_JHR}). IHDP was inspired by ABC/CARE \citep[][]{Gross_Spiker_etal_1997_BOOKHelpinglowbirth}.} For want of long-term followup data, many studies of early childhood programs report outcomes at early ages. Moreover, they use only limited sets of outcomes like IQ or scores on school readiness measures.\footnote{See, e.g., \cite{Kline_Walters_2016_QJE} and \cite{Weiland_2013_CD_Impacts-of-Pre-K}.} Yet it is the long-term costs and benefits that are relevant for policy analysis.
 
-We analyze a large array of life-cycle benefits from two virtually identical early childhood programs with randomized designs conducted in North Carolina. The programs are the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE), henceforth ABC/CARE. They were launched in the early 1970s and have long-term follow-ups through age 34. The programs started early (at 8 weeks of life) and engaged participants to age 5. We analyze their impacts on a variety of life outcomes such as health, the quality of life, participation in crime, labor income, IQ, schooling, and increases in mothers' labor income arising from program subsidies to childcare.
+We analyze a large array of life-cycle benefits from two virtually identical early childhood programs with randomized designs conducted in North Carolina. The programs are the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE), henceforth ABC/CARE. They were launched in the early 1970s and have long-term follow-ups through age 34. The programs started early (at 8 weeks of life) and engaged participants to age 5. We analyze their impacts on a variety of life outcomes such as health, the quality of life, participation in crime, labor income, IQ, schooling, and increases in mothers' labor income arising from program subsidies to childcare.\footnote{The income we observe is aggregated across the parents. Only 27\% of the mothers leaved with a couple at baseline, so we refer to the gain in parental income as a gain in mother's labor income.}
 
 Evidence from these programs is relevant for contemporary policy discussions because their main components are present in a variety of programs currently in place around the world.\footnote{Programs inspired by ABC/CARE have been (and are being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on ABC/CARE. The names of the programs with years launched and locations in parentheses are: IHDP---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} About 19\% of all African-American children are eligible for the program today.\footnote{43\% of African-American children were eligible in 1972 \citep{Garcia_2016_National-Implementation-ECI}.}
 
@@ -111,16 +111,15 @@ We use a variety of methods to forecast future outcomes. Our analysis is greatly
 
 We account for sampling uncertainty from pooling data, estimating parameters, and simulating models. We conduct sensitivity analyses for outcomes for which sampling uncertainty is not readily quantified. Our approach to pooling multiple data sets and analyzing blocks of outcomes is of interest in its own right as a template for evaluating other programs with numerous long-run outcomes using intermediate outcome measures.
 
-We account for control group substitution bias.\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline_Walters_2016_QJE}.} Roughly 75\% of the controls in ABC/CARE enroll in some form of alternative preschool at some point of time. We define and estimate parameters accounting for the variety of choices available and taken by the control groups in our study.
+We account for control group substitution bias.\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline_Walters_2016_QJE}.} Roughly 75\% of the control-group children in ABC/CARE enroll in some form of alternative preschool at some point of time. We define and estimate parameters accounting for the variety of choices available and taken by the control groups in our study.
 
 We contribute to the literature on the effectiveness of early childhood programs by considering long-term benefits on health. We estimate the savings in life-cycle medical costs and improvements in the quality of life.\footnote{\cite{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} show the substantial adult (age 34) health benefits of ABC but do not present a cost/benefit analysis of their results.} We also find substantial childcare benefits that promote work by the mothers of participants, and additional benefits for participants in terms of reduced crime, gains in life-cycle labor income, reduced special education costs, and enhanced educational attainment.
 
-Figure~\ref{figure:npvsall} summarizes the main findings of this paper. It displays the discounted (by a 3\% discount rate) life-cycle program (net) costs and benefits (in 2014 USD) for a pooled sample of male and female participants along with the monetized benefits disaggregated by category. Costs are substantial, as has frequently been noted by critics.\footnote{See, e.g., \citet{Whitehurst_2014_Senate_Testimony} and \citet{Fox_News_2014_Head_Start_Effects}.} But so are the benefits, which far outweigh the costs. The benefits accrue accross multiple life domains.
+Figure 1 summarizes the main findings of this paper. It displays the discounted (by a 3\% discount rate) life-cycle program (net) costs and benefits (in 2014 USD) for a pooled sample of male and female participants along with the monetized benefits disaggregated by category. Costs are substantial, as has frequently been noted by critics.\footnote{See, e.g., \citet{Whitehurst_2014_Senate_Testimony} and \citet{Fox_News_2014_Head_Start_Effects}.} But so are the benefits, which far outweigh the costs. The benefits accrue accross multiple life domains.
 
-\begin{sidewaysfigure}[!htbp]
-\textbf{[JJH: Jorge said he has updates for this.] [JLG: This plot and the similar plots with more counterfactuals will be updated, the latest tomorrow. I'm just double checking everything and might take longer. But note that the ratio/IRR doesn't change for pooled, barely changes for males + females. What changes is that the results for females now are still relatively low but are significant.]}
-\caption{Net Present Value of Main Components of the Cost/benefit Analysis Over the Life-cycle, ABC/CARE Males and Females}
-\label{figure:npvsall}
+\noindent \textbf{[JLG: All CBA results are up to date. Note that labor income became not significant when pooling samples, but significant when considering females and males separately. The non-significance is marginal. All ratios for females are now significant.]}
+
+\begin{sidewaysfigure}[!htbp] \label{figure:main}
 \centering
 \includegraphics[width=.7\columnwidth]{output/abccare_npvssumm.eps}
 \floatfoot{
@@ -220,7 +219,7 @@ Individuals are eligible to participate in the program if baseline background va
 
 As it turns out, in the ABC/CARE study, all of the eligible persons ($\bm{B}\in\mathcal{B}_0$) given the option to participate choose to participate in the program $(W=1\text{, and } D=R)$. Thus, we can safely interpret the treatment effects generated by the experiment as average treatment effects for the population for which $\bm{B}\in\mathcal{B}_0$ and not just treatment effects for the treated (\textbf{TOT}).\footnote{See the evidence in Appendix~\ref{appendix:assessingcc}.} There are few dropouts from the program. \emph{Ex ante}, parents perceived that ABC/CARE was superior to other childcare alternatives.
 
-Let $\bm{Y}^1_t$ be the outcome vector for the treated. $\bm{Y}^0_t$ is the outcome vector for those denied treatment in the program. In principle, life-cycle treatment effects for the controls and treatment group members can depend on the exposures to treatment or to the various alternatives at each age. It would be desirable to estimate treatment effects for each type of exposure but our samples are too small to make credible estimates for such detailed exposures.
+Let $\bm{Y}^1_t$ be the outcome vector for the treated. $\bm{Y}^0_t$ is the outcome vector for those denied treatment in the program. In principle, life-cycle treatment effects for the control- and treatment-group members can depend on the exposures to treatment or to the various alternatives at each age. It would be desirable to estimate treatment effects for each type of exposure but our samples are too small to make credible estimates for such detailed exposures.
 
 We simplify the analysis by creating two categories of control status. ``H'' indicates that the child is in home care throughout the entire length of the program. ``C'' indicates that the child was in an alternative preschool anytime. We test different categorizations in our empirical analysis reported below.
 
@@ -230,7 +229,7 @@ We thus compress a complex reality into two counterfactual outcome states at age
 \bm{Y}_{t,C}^0 \quad &: \quad \textbf{ Subject received some alternative childcare}.
 \end{align*}
 
-We define $V$ as a dummy variable indicating participation by controls in an alternative preschool. $V=0$ denotes staying at home. The outcome when a child is in control status is $\bm{Y}^0_t$:
+We define $V$ as a dummy variable indicating participation by control-group children in an alternative preschool. $V=0$ denotes staying at home. The outcome when a child is in control status is $\bm{Y}^0_t$:
 \begin{equation}
 \bm{Y}^0_t : = \left( 1 - V \right) \bm{Y}^0_{t,H} + \left( V \right) \bm{Y}^0_{t,C}.
 \end{equation}
@@ -357,13 +356,13 @@ Note: This table details the non-experimental data sources we use to interpolate
 
 \subsection{Using Auxiliary Samples to Predict Out of Sample Earnings}\label{sec:necrosis}
 
-We have data on treatments and controls through age $t^{\ast}$. We lack information on participant outcomes afterward. Yet, post-$t^{\ast}$ outcomes are required to construct counterfactual life-cycle profiles. The goal is to find counterparts to both treatment and control individuals in the auxiliary data on whom we have post-$t^{\ast}$ data.
+We have data on control- and treatment-group individuals through age $t^{\ast}$. We lack information on participant outcomes afterward. Yet, post-$t^{\ast}$ outcomes are required to construct counterfactual life-cycle profiles. The goal is to find counterparts to both treatment and control individuals in the auxiliary data on whom we have post-$t^{\ast}$ data.\footnote{An alternative approach to predict life-cycle income is to follow \citet{Mincer_1974_schooling}, who claims that labor income around $t^*$ is a good measure of lifetime income. We show that a discount rate of 2\% is necessary to equate a Mincer-type prediction to our life-cycle prediction in Appendix~\ref{app:mincer}.}
 
 Because the participants of ABC/CARE are now in their mid-40s, there is no post-40s information on the same cohort  in any data. We use a synthetic cohort approach in which adjusted outcomes of older cohorts are used to estimate the future outcomes of the ABC/CARE participants. This approach is standard in the human capital literature. However, cohort effects may induce substantial biases. \textbf{[JJH: Jorge, we should show estimates under different assumptions about wage growth, health care costs, etc.] [JLG: yes, working on an appendix for this.] [JJH: Okay, please update me.] [JLG: yes, as soon as I have it.]}
 
 Following \citet{Heckman_Ichimura_etal_1998_REStud}, we use matching to find synthetic cohort counterparts in the auxiliary samples for both treatment and control group members. We match on baseline variables $\bm{B}$, as well as variables caused by treatment (i.e., for which there are treatment effects) that predict future outcomes---e.g., education, IQ, etc.---through age $t^{\ast}$. We then fit life-cycle relationships for outcomes beyond $t^{\ast}$ for the synthetic treatment and control groups using the initial conditions from the treatment and control groups at age $t^{\ast}$. From these predictions, we construct life-cycle profiles for the post-$t^*$ samples.
 
-Specifically, let $\bm{Y}^{d}_{i,t}$ be an outcome at time $t$ for an individual in treatment status $d$. Measured predictors of the outcome are $\bm{X}^{d}_{i,t}$ and $\bm{B}_i$.\footnote{$\bm{B}$ is balanced across treatments and controls by randomization.} We determine the predictors using within experimental sample analyses. We then find counterparts in the synthetic cohort samples. Let $S \in \{ 0,1\}$ denote membership in the experimental sample $(S=1)$ or the auxiliary sample $(S=0)$.
+Specifically, let $\bm{Y}^{d}_{i,t}$ be an outcome at time $t$ for an individual in treatment status $d$. Measured predictors of the outcome are $\bm{X}^{d}_{i,t}$ and $\bm{B}_i$.\footnote{$\bm{B}$ is balanced across control- and treatment-group individuals by randomization.} We determine the predictors using within experimental sample analyses. We then find counterparts in the synthetic cohort samples. Let $S \in \{ 0,1\}$ denote membership in the experimental sample $(S=1)$ or the auxiliary sample $(S=0)$.
 
 For individual $i$, find counterparts $j(i)$ such that
 \begin{equation}\label{eq:ingrownnail}
@@ -371,8 +370,7 @@ For individual $i$, find counterparts $j(i)$ such that
 \end{equation}
 where $\epsilon$ is arbitrarily small. $j(i) \in F_0$, for $t \leq t^{\ast}$, where $F_0$ is the index set in the auxiliary sample and $\bm{\Sigma}^d$ is the covariance matrix of the $\bm{X}$ in the experimental sample group $d$. We construct synthetic cohort samples using the same auxiliary samples and weight using the inverse value of~\eqref{eq:ingrownnail}. We fit dynamic relationships in the synthetic cohort sample over the whole sample period. Using the dynamic relationships in the synthetic cohort sample and the initial conditions from the experimental sample, we predict future outcomes. For this approach to be effective, we require that the support of the auxiliary sample includes the support of the experimental sample, an assumption formalized in the next subsection.\footnote{Evidence on this assumption is in Appendix~\ref{appendix:methodology}. In practice, we use indicators for black and male, year of birth, and years of education and labor income at age 30 as matching variables. We explain how we pick these variables and provide a sensitivity analysis to this choice in Appendix~\ref{appendix:methodology}.}
 
-
-Figure~\ref{fig:labor-income-profiles} displays the life-cycle profiles for synthetic treatments and controls that are generated from this procedure. It also displays the profiles of the experimental treatments and controls through $t^*$. For men, the agreement through $t^*$ is close. It is less accurate for women. Our pattern of life-cycle labor incomes is typical for low-skilled workers. See, e.g., \citet{Blundell-etal_2015_J-Pub-E}, \citet{Gladden_Taber_2000_WageProgression}, and \citet{Sanders-Taber_2012_AR}.\footnote{The prediction is based on indicator variables of being male and being black, mother's education, average PIAT scores from ages 5 to 7, years of education at age 30, body-mass index at 34, labor income at ages 21 and 30, and one-period lagged labor income. We do not have all of the components of the High Risk Index in our auxiliary samples after age 45, so we only use a subset to make the life-cycle matches. A justification for the use of these variables, evidence on their predictive power, a sensitivity analysis to using different prediction variables are in Appendix~\ref{appendix:methodology}.}
+Figure~\ref{fig:labor-income-profiles} displays the life-cycle profiles for the synthetic control and treatment groups generated from this procedure.\footnote{We use labor income as an illustration in this section because the life-cycle patterns are well-known in the literature and straightforward to compare between the experimental and non-experimental samples. We predict transfer income using this same procedure. See Section~\ref{section:cbaresults} for results.} It also displays the profiles of the experimental control and treatment groups through $t^*$. The agreement through $t^*$ is close. It is less accurate for females. Our pattern of life-cycle labor incomes is typical for low-skilled workers \citep{Blundell-etal_2015_J-Pub-E,Gladden_Taber_2000_WageProgression,Sanders-Taber_2012_AR}.\footnote{The prediction is based on indicator variables of being male and being black, mother's education, average PIAT scores from ages 5 to 7, years of education at age 30, body-mass index at 34, labor income at ages 21 and 30, and one-period lagged labor income. We do not have all of the components of the High Risk Index in our auxiliary samples after age 45, so we only use a subset to make the life-cycle matches. A justification for the use of these variables, evidence on their predictive power, a sensitivity analysis to using different prediction variables are in Appendix~\ref{appendix:methodology}.}
 
 We also compare the predicted labor income based on the synthetic control and treatment groups with the realized labor income for the ABC/CARE control- and treatment-group participants. The match is very good.
 
@@ -393,7 +391,7 @@ We also compare the predicted labor income based on the synthetic control and tr
 Note: Panels (a) displays the predicted labor income life-cycle profiles for ABC/CARE for males by treatment status, based on the method proposed in this section. We combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). We highlight the \textit{realized or observed} labor income at $t^*$ (age 30) for the ABC/CARE control- and treatment-group participants. Panel (b) displays the analogous figure for females. Standard errors are based on the empirical bootstrap distribution.  See Appendix~\ref{appendix:methodology} for a discussion of our choice of predictors and a sensitivity analysis to this choice. \textbf{[JJH: Jorge, looks bad.] [JLG: consequence of smoothing. Please see the boxes. I think they are useful but please cross them if else.] [JJH: Why so bad for women?] [JLG: The predicted and observed are in close agreement.]}
 \end{sidewaysfigure}
 
-In the experimental sample, the parents of children with observed characteristics $\bm{B} \in \mathcal{B}_0$ accept participation in the program. Since in the non-experimental sample there are no treatment group members, a test of validity of our matching procedure is to compare the labor incomes of non-experimentals for whom $\bm{B} \in \mathcal{B}_0$ to the labor incomes of the synthetic control group members (i.e., the groups in the non-experimental samples that we use to extrapolate control group outcomes). We also compare labor income at $t^*$ of both groups to the observed labor income in the experimental sample (we observe labor income at $t^*$). Figure~\ref{figure:controltests} plots these comparisons. We plot the labor income of individuals in our non-experimental sample such that $\bm{B} \in \mathcal{B}_0$ and the synthetic control group from ages 20 to 45. We also display the labor income of the experimental control group at $t^*$ (age 30).\footnote{The graphs stop at age 45 because, as previously noted, we do not observe all of the components of the High Risk Index after age 45 in the non-experimental samples. We use only a subset of it in our life cycle projections. Nonetheless, the subset variables are effective predictors over the range where the full set of $\bm{B}$ is available.}
+In the experimental sample, the parents of children with observed characteristics $\bm{B} \in \mathcal{B}_0$ accept participation in the program. Since in the non-experimental sample there are no treatment group members, a test of validity of our matching procedure is to compare the labor income of individuals in the non-experimental sample for whom $\bm{B} \in \mathcal{B}_0$ to the labor incomes of the synthetic control group members (i.e., the groups in the non-experimental samples that we use to extrapolate control group outcomes). We also compare labor income at $t^*$ of both groups to the observed labor income in the experimental sample (we observe labor income at $t^*$). Figure~\ref{figure:controltests} plots these comparisons. We plot the labor income of individuals in our non-experimental sample such that $\bm{B} \in \mathcal{B}_0$ and the synthetic control group from ages 20 to 45. We also display the labor income of the experimental control group at $t^*$ (age 30).\footnote{The graphs stop at age 45 because, as previously noted, we do not observe all of the components of the High Risk Index after age 45 in the non-experimental samples. We use only a subset of it in our life cycle projections. Nonetheless, the subset variables are effective predictors over the range where the full set of $\bm{B}$ is available.}
 
 \begin{sidewaysfigure}[!htbp]
 \centering
@@ -487,33 +485,12 @@ We assume that the $\bm{X}^d_t$ are exogenous with respect to the errors:
 Putting Assumptions~\ref{ass:butts}--\ref{ass:corns} together, we obtain full observability of $\bm{X}^d_t$, estimation on the matched samples based on \eqref{eq:ingrownnail} generates unbiased out of sample treatment effects. $\Box$
 \end{theorem}
 
-Our prediction is based on matching individuals in the non-experimental samples to the control-group individuals. In the non-experimental samples, however, the dependence between $\bm{X}_{t}$ and $\bm{\varepsilon}_{t}$ is generally different from that dependence in the experimental sample. This is because of violation of exogeneity.
+Our prediction is based on matching individuals in the non-experimental sample to individuals experimental sample \textit{on observed characteristics}. In general, the dependence between $\bm{X}_{t}$ and $\bm{\varepsilon}_{t}$ is not the same across these two types of samples, and could generate a violation of exogeneity (Assumption~\ref{ass:corns}). This can occur in two ways: (i) the experiment does not necessarily identify the production function in \eqref{eq:trenchfoot} because there could be unmeasured inputs (even generates by the experiment); (ii) even if we could measure all inputs, the inputs are not necessarily exogenous in the non-experimental sample. A simple example is the following: in the experimental sample, the program shifts of education. We match based on education to create a treatment synthetic cohort. But we could be doing so by matching to individuals in the non-experimental sample who are highly educates because they come from a better backgrounds, be more motivated, etc. This would bias our prediction from the matched samples.
 
-This can occur in two ways. First, even though the experiment identifies treatment effects for outcomes and treatment effects for measured inputs, it does not necessarily identify production function~\eqref{eq:trenchfoot} because unmeasured inputs may be caused by the experiment. Second, even if all relevant inputs are determined in the experimental sample, in the auxiliary sample those inputs are not necessarily exogenous.
+We tackle this issue in Appendix~\ref{app:endogeneity} using a factor-structure-based control function approach developed and applied in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Using measures of latent skills, we adopt a factor structure for $\bm{\varepsilon}^d_t, d \in \left\{0,1\right\}, t \in \left\{0,...,T\right\}$. We assume that the extracted factors are the source of violations of Assumption~\eqref{ass:corns}. We test if our predictions differ when we account for the factors, aside from the rest of the variable we use to predict. Our predictions do not display major changes and we cannot reject the null hypotheses that these factors do not have a significant effect on our prediction. We use this same structure to test Assumption~\ref{ass:eczema} in Appendix~\ref{app:invariance}. We fail to reject the null hypotheses implied by this assumption.
 
-For example, the randomization shifts educational attainment. However, in the non-experimental individuals with relatively high educated individuals could come from a better backgrounds, be more motivated, etc. This would bias our prediction from the matched samples.
-
-We address this problem in Appendix~\ref{appendix:methodology} using a factor structure control function approach developed and applied in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Using measures of latent skills, we adopt a factor structure for $\bm{\varepsilon}^d_t, d \in \left\{0,1\right\}, t \in \left\{0,...,T\right\}$.
-
-We assume that the extracted factors are the source of violations of \eqref{ass:corns}. We also use this approach to test \ref{ass:eczema}. Using our extracted factors, we do not reject this hypothesis (see Appendix~\ref{app:method_noobs}). \textbf{[JJH: Typists, put in the Factor Structure material in the notes in an appendix and ask Jorge to describe the results. Jorge, please put in a dedicated section.]  [JLG: Yes, working on it. We have the material. This is just what you wanted to put in. I'll update.]}
-
-Another approach to forecasting the lifetime present value of earnings uses an idea due to \citet{Mincer_1974_schooling}. Around $t^*$ (which is the early 30s), Mincer claims that it is possible to get a good measure of the perpetuity flow of lifetime earnings, i.e., $Y_{t^*}/r$ is the net present value of earnings where $r$ is the discount rate. Using a discount rate of around 2\% we get the closes agreement with our life-cycle prediction.
-
-\begin{table}[!htbp]
-\begin{threeparttable}
-\caption{Mincer-type Predictions, Age 30}\label{tab:mincerpred}
-\scriptsize
-\centering
-\input{output/mincerpred_ready}
-\begin{tablenotes}
-\footnotesize
-\item Note: This table compares the predicted net present value of labor income (Life-cycle Prediction) to a perpetuity estimated based predicted labor income at age 30 (Age-30 Prediction) and on different discount rates (Age-30 Perpetuity). Predictions are based on the method we explain in this section. All values are in 2014 USD. Standard errors are in parentheses and are based on the empirical bootstrap distribution.\\
-\item $\bm{r^*}$: discount rate such that the value of the perpetuity and the life-cycle prediction coincide.
-\end{tablenotes}
-\end{threeparttable}
-\end{table}
-
-\textbf{[JJH: Jorge, it is a tautology -- the only question is how low $r$ is (experiment -- set values). This is really a footnote issue. And may not be worth it.] [JLG: Please see the new version of this table. It has $r*$ such that (Age-30 Prediction)/r = Life-cycle Prediction. We can send to Appendix if not needed and summarize briefly here. The message is that around a very low $2\%$ is the number we are looking for, for the equality to hold.]}
+\noindent \textbf{[JLG: these two appendices are now in separate sections in Section C. I will work with the typists so we can integrate it to the HO.]}
+\noindent \textbf{[JLG: I have sent the Mincer-type predictions to Appendix C. But note that the rates making the pepetuity = NPV is very close to 2\% for both experimental groups and both gender. This is in the HO.]}
 
 \subsection{Health} \label{section:health}
 
@@ -586,7 +563,7 @@ Follow-up data on educational attainment were collected up to age 30. In Appendi
 
 \section{Cost/benefit Analysis} \label{section:cbaresults}
 
-This section reports cost/benefit and rate of return analyses underlying Figure~\ref{figure:npvsall}. The results we discuss are the central focus of this paper.
+This section reports cost/benefit and rate of return analyses underlying Figure 1. The results we discuss are the central focus of this paper.
 
 \subsection{Program Costs} \label{section:programscosts}
 
@@ -611,7 +588,7 @@ It is important to note that although the net present values from the three comp
 \includegraphics[width=.7\columnwidth]{output/abccare_npvs3.eps}
 \floatfoot{
 \footnotesize
-Note: This figure displays the life-cycle net present values of the main components of the cost/benefit analysis of ABC/CARE from birth to age 79, discounted to birth at a rate of 3\%. ``Treatment vs. Control'': compares the treatment to the control group. ``Treatment vs. Stay at Home'': compares the treatment group to those subjects who stayed at home. ``Treatment vs. Alternative Preschool'': compares the treatment group to those subjects who attended alternative preschools. The latter two are based on matching estimators that account for selection on observable variables. By ``net" we mean that each component represents the total value for the treatment group minus the total value for the control group. Program costs: the total cost of implementing ABC/CARE. Total net benefits: the total net benefits of \textit{all} the components we consider. Labor income: total individual labor income from ages 20 to the retirement of program participants  (assumed to be age 67). Parental income: total parental labor income of the parents of the program participants from when the participants were ages 1.5 to 21. Crime: the total cost of crime (judicial and victimization costs). Total medical costs: both private and public medical costs from ages 15 to 79. Costs of education: the total costs of education of the individual from ages 6 to 26 and include any costs from special education and grade retention. For display simplicity, the following components are omitted from the figure: (i) cost of alternative preschool paid by the control group children parents; (ii) transfer income from the government; (iii) disability benefits and social security claims; and (iv) costs of increased maternal education. The crime life-cycle net present value for Treatment vs. Stay at Home is different than zero. It is $-\$20,251.68$ (2014 USD). Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We highlight point estimates significant at the $10\%$ level.\\
+Note: This figure displays the life-cycle net present values of the main components of the cost/benefit analysis of ABC/CARE from birth to age 79, discounted to birth at a rate of 3\%. ``Treatment vs. Control'': compares the treatment to the control group. ``Treatment vs. Stay at Home'': compares the treatment group to those subjects who stayed at home. ``Treatment vs. Alternative Preschool'': compares the treatment group to those subjects who attended alternative preschools. The latter two are based on matching estimators that account for selection on observable variables. By ``net" we mean that each component represents the total value for the treatment group minus the total value for the control group. Program costs: the total cost of implementing ABC/CARE. Total net benefits: the total net benefits of \textit{all} the components we consider. Labor income: total individual labor income from ages 20 to the retirement of program participants  (assumed to be age 67). Parental income: total parental labor income of the parents of the program participants from when the participants were ages 1.5 to 21. Crime: the total cost of crime (judicial and victimization costs). Total medical costs: both private and public medical costs from ages 15 to 79. Costs of education: the total costs of education of the individual from ages 6 to 26 and include any costs from special education and grade retention. For display simplicity, the following components are omitted from the figure: (i) cost of alternative preschool paid by the control group children parents; (ii) transfer income from the government; (iii) disability benefits and social security claims; and (iv) costs of increased maternal education. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We highlight point estimates significant at the $10\%$ level.\\
 *QALYs refers to the quality-adjusted life years. Any gain corresponds to better health conditions through age 79.\\
 }
 \end{sidewaysfigure}
@@ -713,7 +690,7 @@ This paper studies two influential early childhood interventions evaluated by th
 
 To reach these conclusions, we address a number of empirical challenges: (a) control group substitution; (b) extrapolating lifetime benefits beyond the experimental period; and (c) multiple hypothesis testing. Our approach serves as a template for economic evaluations of programs with partial follow up over the life cycle.
 
-We find that benefits differ substantially by gender. Women have more beneficial treatment effects than men, but the monetized value of the male treatment effects are greater. There are substantial effects on health and the quality of life and on crime for men. For women, the benefits are concentrated on employment, education and earnings. The program subsidizes causal effect on maternal earnings. We establish the benefits of analyzing long term multiple benefits of this intervention.
+We find that benefits differ substantially by gender. Females have more beneficial treatment effects than males, but the monetized value of the male treatment effects are greater. There are substantial effects on health and the quality of life and on crime for males. For females, the benefits are concentrated on employment, education and earnings. The program subsidizes causal effect on maternal earnings. We establish the benefits of analyzing long term multiple benefits of this intervention.
 
 %References
 \singlespace
