--- a/output/abccare_funcform1_ti_ready.tex
+++ b/output/abccare_funcform1_ti_ready.tex
@@ -1,5 +1,6 @@
 \begin{tabular}{lcccccccccccc} \toprule
-&\multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} & \multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} \\ \midrule
+&\multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} & \multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} \\
+ & Coefficient  & $p$-value  & Coefficient  & $p$-value & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value \\ \midrule
 Mother's Education  &  -360.538 &     0.775 &  -354.602 &     0.760 &     5.936 &     0.500 &  -468.425 &     0.810 &  -553.713 &     0.735 &   -85.288 &     0.545 \\  
 PIAT (5-7) &         &         &         &         &         &         &         &         &         &         &         &         \\  
 Education (30) &         &         &         &         &         &         &         &         &         &         &         &         \\  
