--- a/output/abccare_funcform3_ti_ready.tex
+++ b/output/abccare_funcform3_ti_ready.tex
@@ -1,5 +1,5 @@
 \begin{tabular}{lcccccccccccc} \toprule
-&\multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} & \multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} \\ \midrule
+&\multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} & \multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} \\
  & Coefficient  & $p$-value  & Coefficient  & $p$-value & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value \\ \midrule
 Mother's Education &   596.207 &     0.285 &   210.175 &     0.340 &  -386.033 &     0.640 &   934.267 &     0.265 &   -83.809 &     0.580 & -1,018.076 &     0.710 \\  
 PIAT (5-7) &  -270.010 &     0.810 &   -35.091 &     0.810 &   234.918 &     0.220 &  -678.307 &     0.865 &    57.875 &     0.265 &   736.182 &     0.125 \\  
