--- a/output/abccare_funcform1_ready.tex
+++ b/output/abccare_funcform1_ready.tex
@@ -1,5 +1,5 @@
 \begin{tabular}{lcccccccccccc} \toprule
-&\multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} & \multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} \\ \midrule
+&\multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} & \multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} \\
  & Coefficient  & $p$-value  & Coefficient  & $p$-value & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value \\ \midrule
 Mother's Education &   440.383 &     0.380 &  3,693.417 &     0.300 &  3,253.033 &     0.340 &  -203.428 &     0.525 &  3,328.924 &     0.375 &  3,532.352 &     0.370 \\  
 PIAT (5-7) &         &         &         &         &         &         &         &         &         &         &         &         \\
