--- a/output/abccare_funcform3_ready.tex
+++ b/output/abccare_funcform3_ready.tex
@@ -1,5 +1,5 @@
 \begin{tabular}{lcccccccccccc} \toprule
-&\multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} & \multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} \\ \midrule
+&\multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} & \multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} \\
  & Coefficient  & $p$-value  & Coefficient  & $p$-value & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value \\ \midrule
 Mother's Education & -3,396.557 &     0.905 &  -595.010 &     0.570 &  2,801.547 &     0.265 & -4,939.547 &     0.925 & -1,783.446 &     0.645 &  3,156.101 &     0.300 \\  
 PIAT (5-7)&   646.297 &     0.100 &   213.484 &     0.395 &  -432.812 &     0.645 &  1,252.342 &     0.035 &   290.428 &     0.450 &  -961.914 &     0.745 \\  
